--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file src/translations/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
-    "compile": "formatjs compile-folder --ast src/translations/uncompiled src/translations/compiled"
+    "compile": "formatjs compile-folder --ast src/translations/uncompiled src/translations/compiled",
+    "lint": "eslint --ext .ts,.js,.tsx src/**/*.ts*"
   },
   "dependencies": {
     "daisyui": "^2.13.3",
@@ -51,5 +52,8 @@
     "preact-render-to-string": "^5.1.20",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
