chore: ready to publish

--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,8 @@
       {
         "targets": {
           "browsers": [">0.25%", "not dead"]
-        }
+        },
+        "reactRuntime": "automatic"
       }
     ]
   ]
