--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "INTERNAL_STATUS_PORT=1235 gatsby develop",
+    "develop": "INTERNAL_STATUS_PORT=1345 gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
-    "extract": "formatjs extract 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file src/translations/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
+    "extract": "formatjs extract 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file src/translations/uncompiled/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
     "compile": "formatjs compile-folder --ast src/translations/uncompiled src/translations/compiled",
-    "lint": "eslint --ext .ts,.js,.tsx src/**/*.ts*"
+    "lint": "eslint . --ext .ts,.js,.tsx"
   },
   "dependencies": {
-    "daisyui": "^2.13.3",
+    "@headlessui/react": "^0.0.0-insiders.cb7a969",
+    "classnames": "^2.3.1",
     "gatsby": "^4.10.3",
     "gatsby-plugin-google-gtag": "^4.11.0",
     "gatsby-plugin-image": "^2.10.1",
@@ -28,14 +29,18 @@
     "gatsby-plugin-sitemap": "^5.10.2",
     "gatsby-source-filesystem": "^4.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
+    "jotai": "^1.6.4",
+    "rc-slider": "^10.0.0-alpha.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^12.0.5",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.24.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.17.8",
     "@formatjs/cli": "^4.8.3",
+    "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
@@ -44,12 +49,15 @@
     "autoprefixer": "^10.4.4",
     "babel-plugin-formatjs": "^10.3.19",
     "babel-preset-gatsby": "^2.11.1",
+    "eslint-config-react-app": "^7.0.0",
     "gatsby-plugin-postcss": "^5.10.0",
     "gatsby-plugin-preact": "^6.11.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "postcss": "^8.4.12",
     "preact": "^10.7.0",
     "preact-render-to-string": "^5.1.20",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   },
