--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "eslint-config-react-app": "^7.0.0",
     "gatsby-plugin-postcss": "^5.10.0",
     "gatsby-plugin-preact": "^6.11.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "postcss": "^8.4.12",
     "preact": "^10.7.0",
     "preact-render-to-string": "^5.1.20",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "extends": "react-app"
