--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint . --ext .ts,.js,.tsx"
   },
   "dependencies": {
-    "@headlessui/react": "^0.0.0-insiders.cb7a969",
+    "@headlessui/react": "^1.6.0",
+    "@heroicons/react": "^1.0.6",
     "classnames": "^2.3.1",
     "gatsby": "^4.12.1",
     "gatsby-plugin-google-gtag": "^4.11.0",
