--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "classnames": "^2.3.1",
     "gatsby": "^4.12.1",
     "gatsby-plugin-google-gtag": "^4.11.0",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-manifest": "^4.10.2",
+    "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-sitemap": "^5.10.2",
@@ -42,6 +45,7 @@
     "@babel/plugin-proposal-decorators": "^7.17.8",
     "@formatjs/cli": "^4.8.3",
     "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
