--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^1.0.6",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
+    "@vercel/analytics": "^0.1.5",
     "classnames": "^2.3.1",
     "gatsby": "^4.12.1",
     "gatsby-plugin-google-gtag": "^4.11.0",
